--- a/README.html
+++ b/README.html
@@ -44,8 +44,7 @@
 
 <body class="vscode-body vscode-light">
     <h1 id="oi-checker-readme">OI-Checker README</h1>
-    <p>可灵活配置的 OI 自动对拍器。</p>
-    <p>项目处于开发阶段，可能会发生破坏性改动。</p>
+    <p>可灵活配置、基于 Rust 开发的 OI 自动对拍器。</p>
     <p><a
             href="https://wakatime.com/badge/user/b039f61c-2701-482d-9f84-542f07630e52/project/d4ca9e8d-4006-440d-92c7-b95b26fda0e5"><img
                 src="https://wakatime.com/badge/user/b039f61c-2701-482d-9f84-542f07630e52/project/d4ca9e8d-4006-440d-92c7-b95b26fda0e5.svg"
@@ -58,6 +57,14 @@
         <a href="https://github.com/cup113/oi_checker"><img
                 src="https://img.shields.io/github/license/cup113/oi_checker" alt="MIT License"></a>
     </p>
+    <h2 id="程序优势">程序优势</h2>
+    <ul>
+        <li>体积小。安装包展开不超过 10MB 。</li>
+        <li>支持路径名为包括中文在内的所有 <code>Unicode</code> 有效字符。</li>
+        <li>自动化测试。这意味着您可以让它运行成百上千的测试以尽可能覆盖边缘情况。</li>
+        <li>多线程。加速运行测评。</li>
+        <li>友好的错误提示。程序对于考虑到的常见错误给予了非常详细的提示。</li>
+    </ul>
     <h2 id="命令行参数">命令行参数</h2>
     <pre><code>An OI Checker. To get more information, please see README.html
 
@@ -83,7 +90,7 @@ Options:
     <p>详见<code>config_default.toml</code>。</p>
     <h2 id="使用步骤">使用步骤</h2>
     <ol>
-        <li>安装程序。</li>
+        <li>安装程序（下载安装包或 <code>cargo install</code> 本地编译）。</li>
         <li>将程序所在目录添加至 <code>PATH</code> 中。</li>
         <li>将程序平级的 <code>config_default.toml</code> 复制一份到 <code>config.toml</code> ，并根据喜好进行修改。</li>
         <li>根据命令行参数使用</li>
@@ -93,9 +100,39 @@ Options:
             <code>oi_checker --get-default-config &gt; oi_checker_config.toml</code> ，然后进行修改。
         </li>
     </ul>
-    <h2 id="程序运行流程">程序运行流程</h2>
-    <p>大致流程详见<code>state_diagrams/overview.mmd</code></p>
-    <p>TODO</p>
+    <h2 id="核心逻辑程序验证">核心逻辑：程序验证</h2>
+    <h3 id="名词解释">名词解释</h3>
+    <ul>
+        <li><code>Data Generator</code> (DG) 数据生成器</li>
+        <li><code>ACcepted program</code> (AC) 正确程序</li>
+        <li><code>Tested Program</code> (TP) 待测程序</li>
+        <li><code>Output Filter</code> (Filter) 输出过滤程序</li>
+        <li><code>Diff Tool</code> 文本差异比较程序</li>
+        <li><code>AC</code> Accepted 输出正确</li>
+        <li><code>UK</code> Unknown 结果未知</li>
+        <li><code>TLE</code> Time Limit Exceeded 程序超时</li>
+        <li><code>WA</code> Wrong Answer 程序输出错误</li>
+    </ul>
+    <p>注：不考虑 <code>CE</code> (Compile Error) 是因为无法被编译会使主程序提前退出。</p>
+    <h3 id="程序要求">程序要求</h3>
+    <ul>
+        <li>数据生成器：能生成数据范围内的数据。不接受除命令行参数以外的输入，输出到 <code>stdout</code> 中，可选根据测试样例编号不同提供不同难度的数据，尽量能覆盖边缘情况。</li>
+        <li>正确程序：别人写的程序，或自己编写的更直接、暴力（或使用了第三方语言/库）的程序，从 <code>stdin</code> 中读取数据，输出结果到 <code>stdout</code>
+            中。若该程序超时，则可能会引发 <code>UK</code> 。</li>
+        <li>待测程序：待评测的程序。从 <code>stdin</code> 中读取数据，输出结果到 <code>stdout</code> 中。</li>
+        <li>输出过滤程序：暂时只支持内置 <code>3</code> 种过滤程序。</li>
+        <li>文本差异比较程序：接受最后两个文件名为比较的两个文件，并在两文件相同（或符合要求）时返回状态码 <code>0</code> ，不同时返回其他任意状态码（即与 Windows <code>FC</code>,
+            bash <code>diff</code> 的行为保持一致）。</li>
+    </ul>
+    <h3 id="trick">Trick</h3>
+    <ul>
+        <li>如果你想只基于提供的样例输入输出进行测评，可以将数据生成器编写为按照序号从数据文件中读入，再输出到 <code>stdout</code> 中；将正确程序编写为按序号从预期输出结果中读入（忽略数据内容），再输出到
+            <code>stdout</code> 中。但这样无法测试更多的样例。
+        </li>
+        <li>如果一个问题构造数据时可以较容易地得到它的答案，那么可以在数据生成器中将预期结果输出到暂存文件中（注：文件名记得带上测试序号，否则会被覆盖），然后正确程序编写为从对应文件中读取并输出至
+            <code>stdout</code> 中，之后删除暂存文件。
+        </li>
+    </ul>
 
 
 
